# lampp-control

./: Makefile.in  README  configure  configure.in  lampp_control  makefile
po/: Makefile.in  de.mo  de.po  lampp_control.pot
source/: lampp_control.c  makefile
src/: Makefile.in  include.h  lampp_control-vhost.conf  lampp_control.c  lampp_control.desktop  other.c  settings.c  uninstall.sh  vhost.c
src/eggtrayicon/: eggtrayicon.c
