AC_INIT(Lampp Control, 1.1, kleinweby@gmx.de)

AC_PROG_CC()
echo -n "checking for gtk+-2.0... "
if pkg-config gtk+-2.0 --exists; then
	echo yes
else
	echo no
	AC_MSG_ERROR([GTK+-2.0 not found!])
fi

AC_PATH_PROG([INSTALL],[install])

AC_ARG_ENABLE(ubuntu, AC_HELP_STRING([--enable-ubuntu], []),  ac_ubuntu=-DUBUNTU, ac_ubuntu=)
AC_SUBST(UBUNTU,[$ac_ubuntu])

AC_PATH_PROG([GKSU],[gksu])
if test -z $ac_cv_path_GKSU ; then
   AC_MSG_ERROR([gksu not found!])
fi 

AC_PATH_PROG([GKSUDO],[gksudo])
if test -z $ac_cv_path_GKSUDO ; then
   AC_MSG_ERROR([gksudo not found!])
fi 

AC_CHECK_FILE(/opt/lampp/, [], AC_MSG_ERROR([Xampp for linux not found!]))


AC_CONFIG_FILES([Makefile src/Makefile po/Makefile])
AC_OUTPUT
echo Use now make
